# shmeeds

./: .gitignore  Dockerfile  Makefile  README.md  README.txt  action.yml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml
shmeeds/: __init__.py  cli.py  config.py  instagram.py  latest.py  log.py  shell.py  slack.py  tweet.py
tests/: test_shmeeds.py
