[tool.poetry]
name = "shmeeds"
version = "0.1.0"
description = "the official social media assistant of alexrecker.com."
authors = ["Alex Recker <alex@reckerfamily.com>"]
readme = "README.md"
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.4"
ipython = "^7.20.0"
jedi = "^0.18.0"
rope = "^0.18.0"
autopep8 = "^1.5.5"
yapf = "^0.30.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shmeeds = "shmeeds:main"
